Frontend-angular file added

--- a/Frontend-angular/src/app/authenticate/login/login.component.html
+++ b/Frontend-angular/src/app/authenticate/login/login.component.html
@@ -1,58 +1,58 @@
 <app-header></app-header>
 <main class="d-flex align-items-center min-vh-100 py-3 py-md-0">
   <div class="container">
-     <div class="card login-card" style="height: auto;">
+    <div class="card login-card" style="height: auto;">
 
-        <div class="col-md-6" style="border-color: grey; margin-left: 7cm;" >
-          <div class="card-body" style="border-width: 3em;border-color: grey;">
-            <div class="brand-wrapper" style="text-align:center">
-              <p style="color: rgb(12, 12, 12); color: orange; font-size: 45px;">{{role}}</p>
-            </div>
-            <br>
-            <div class="alert alert-danger" *ngIf="error" style="text-align: center;">
-              {{errorMessage}}
-            </div>
-            <p class="login-card-description"
-              style="color: rgb(10, 10, 10); font-family:'Karla', sans-serif; font-size:20px;"><b>Sign in</b></p>
-
-            <form (submit)="onSubmit(login)" #login="ngForm">
-              <div class="form-group">
-                <label for="email" path="userid" class="sr-only">UserId
-                </label>
-                <input type="text" path="userid" name="Id" id="Id" class="form-control" ngModel #userid="ngModel"
-                  placeholder="User Id" autocomplete="off" />
-              </div>
-              <div class="form-group mb-4">
-                <label for="password" path="password" class="sr-only">Password
-                </label>
-                <input type="password" path="password" name="password" id="password" class="form-control"
-                  placeholder="Password" ngModel #password="ngModel" />
-              </div>
-              <input type="hidden" path="role" name="role" id="role" />
-              <br>
-              <div style="text-align: center;">
-                <button name="login" id="login" class="btn btn-info btn-lg form-control" type="submit"
-                  style="background-color: rgb(40, 184, 228);"> Login </button>
-              </div>
-              <br>
-              <div style="text-align:center;" *ngIf="customer">
-                <button name="login" id="login" class="btn btn-info btn-lg form-control" type="submit"
-                  style="background-color: rgb(224, 12, 12);" routerLink="/loginEmployee"> Login Employee </button>
-              </div>
-              <div style="text-align:center;" *ngIf="employee">
-                <button name="login" id="login" class="btn btn-info btn-lg form-control" type="submit"
-                  style="background-color: rgb(241, 12, 62);" routerLink="/loginCustomer"> Login Customer </button>
-              </div>
-            </form>
-            <br>
-            <nav class="login-card-footer-nav">
-              <a style="font-size: 14px; color: #919aa3; margin-right: 10px;">Terms of use.</a>
-              <a style="font-size: 14px; color: #919aa3;">Privacy policy</a>
-            </nav>
+      <div class="col-md-6" style="border-color: grey; margin-left: 7cm;">
+        <div class="card-body" style="border-width: 3em;border-color: grey;">
+          <div class="brand-wrapper" style="text-align:center">
+            <p style="color: rgb(12, 12, 12); color: rgb(246, 184, 13); font-size: 45px;">{{role}}</p>
           </div>
+          <br>
+          <div class="alert alert-danger" *ngIf="error" style="text-align: center;">
+            {{errorMessage}}
+          </div>
+          <p class="login-card-description"
+            style="color: rgb(10, 10, 10); font-family:'Karla', sans-serif; font-size:20px;"><b>Sign in</b></p>
+
+          <form (submit)="onSubmit(login)" #login="ngForm">
+            <div class="form-group">
+              <label for="email" path="userid" class="sr-only">UserId
+              </label>
+              <input type="text" path="userid" name="Id" id="Id" class="form-control" ngModel #userid="ngModel"
+                placeholder="User Id" autocomplete="off" />
+            </div>
+            <div class="form-group mb-4">
+              <label for="password" path="password" class="sr-only">Password
+              </label>
+              <input type="password" path="password" name="password" id="password" class="form-control"
+                placeholder="Password" ngModel #password="ngModel" />
+            </div>
+            <input type="hidden" path="role" name="role" id="role" />
+            <br>
+            <div style="text-align: center;">
+              <button name="login" id="login" class="btn btn-info btn-lg form-control" type="submit"
+                style="background-color: rgb(40, 184, 228);"> Login </button>
+            </div>
+            <br>
+            <div style="text-align:center;" *ngIf="customer">
+              <button name="login" id="login" class="btn btn-info btn-lg form-control" type="submit"
+                style="background-color: rgb(246, 184, 13);" routerLink="/loginEmployee"> Login as Employee </button>
+            </div>
+            <div style="text-align:center;" *ngIf="employee">
+              <button name="login" id="login" class="btn btn-info btn-lg form-control" type="submit"
+                style="background-color: rgb(246, 184, 13);" routerLink="/loginCustomer"> Login as Customer </button>
+            </div>
+          </form>
+          <br>
+          <nav class="login-card-footer-nav">
+            <a style="font-size: 14px; color: #919aa3; margin-right: 10px;">Terms of use.</a>
+            <a style="font-size: 14px; color: #919aa3;">Privacy policy</a>
+          </nav>
         </div>
+      </div>
 
 
-     </div>
+    </div>
   </div>
 </main>
