--- a/Frontend-angular/src/app/header-login/header.component.html
+++ b/Frontend-angular/src/app/header-login/header.component.html
@@ -1,12 +1,15 @@
 <div class="sticky-top bg-info d-flex align-content-center">
+  <a class="logo navbar-brand" href="/">
+    <img src="favicon.ico" alt="..." height="50">
+  </a>
   <a href="" class="active nav-link text-white">
-    <h1> <img alt="" style="height: 1cm;width: 1cm;" src="/src/assets/images/new.jpg" /><i>CTS Bank</i></h1>
+    <h2><i>CTS Bank</i></h2>
   </a>
   <ul class="align-content-center container nav nav-pills justify-content-end">
-    <li class="nav-item"><a class="btn btn-danger" routerLink="/loginEmployee">Employee Login
+    <li class="nav-item"><a class="btn btn-outline-light" routerLink="/loginEmployee">Employee Login
       </a>
     </li>
-    <li class="nav-item"><a class="btn btn-success" routerLink="/loginCustomer">Customer Login
+    <li class="nav-item"><a class="btn btn-outline-light" routerLink="/loginCustomer">Customer Login
       </a>
     </li>
   </ul>
