--- a/Frontend-angular/src/app/header-login/header.component.css
+++ b/Frontend-angular/src/app/header-login/header.component.css
@@ -1,4 +1,16 @@
-a{
+li{
     margin-left: 30px;
     text-decoration: none;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+h2{
+    color: rgb(191, 231, 250);
+    font-style: italic;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    padding-left: 0%;
+}
+  a.logo{
+    margin-left: 40px;
+    margin-right: 0px;
+    padding: auto;
 }
