--- a/Frontend-angular/src/app/welcome/welcome.component.html
+++ b/Frontend-angular/src/app/welcome/welcome.component.html
@@ -1,5 +1,12 @@
 <section>
-
+  <style>
+    h2,
+    p.container {
+      color: rgb(10, 10, 10);
+      font-style: italic;
+      font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    }
+  </style>
   <app-header></app-header>
 
   <br>
@@ -8,7 +15,7 @@
   <div class="container" style="object-fit: cover;">
     <h2 class="text-centre">Welcome to CTS bank</h2>
 
-    <p class="container" style="font-size: larger;">Banking at your fingertip ...!</p>
+    <p class="container" style="font-size: larger;">Get your CTS bank account in a few minutes, right from home...!</p>
   </div>
 
   <br>
@@ -29,26 +36,31 @@
     <div class="card">
 
       <div class="card-body p-5 my-10">
-        <h5 class="card-title">Locate Us</h5>
-        <p class="card-text">You are never too far away from quick,
-          efficient banking services. Locate your nearest branch or an ATM.</p>
+        <h5 class="card-title">Branches</h5>
+        <p class="card-text"><i>
+            Annanagar, Ambattur, Chrompet, <br>
+            Redhills, T-nagar, Velachery, <br>
+            and OMR.<br> </i></p>
+
 
       </div>
     </div>
     <div class="card">
 
       <div class="card-body p-5 my-10">
-        <h5 class="card-title">Call Us</h5>
-        <p class="card-text">In case you wish to speak to our phone
-          banking officer for urgent resolution.</p>
+        <h5 class="card-title">Contact Us</h5>
+        <p class="card-text">
+          <i>Phone : 004-42843454<br>
+            Mail : ctsbanking@gmail.com</i>
       </div>
     </div>
     <div class="card">
 
       <div class="card-body p-5 my-10">
-        <h5 class="card-title">Write to Us</h5>
-        <p class="card-text">Be it an enquiry, feedback or a simple
-          suggestion, write to us & we'll get back to you.</p>
+        <h5 class="card-title">Our Offerings</h5>
+        <p class="card-text"><i>Personal Loan, Car Loan,Home Loan, Savings Account,Credit Card,
+            FD,Education Loan, Current Account, Fastag, Health Insurance,
+            Internet Banking, PPF Account</i></p>
       </div>
     </div>
   </div>
